classDiagram
    class Owner {
        +str name
        +Pet pet
        +dict preferences
    }

    class Pet {
        +str name
        +str species
    }

    class CareTask {
        +str title
        +int duration_minutes
        +str priority
    }

    class ScheduledTask {
        +CareTask task
        +str start_time
        +str reason
    }

    class DailySchedule {
        +list~ScheduledTask~ tasks
        +explain() str
    }

    class Scheduler {
        +build_plan(owner, tasks) DailySchedule
    }

    class ClaudeAI {
        +reason(owner, tasks)
    }

    Owner "1" --> "1" Pet : owns
    Owner "1" --> "many" CareTask : submits
    Owner ..> Scheduler : passed into
    CareTask ..> Scheduler : passed into
    Scheduler ..> ClaudeAI : asks for reasoning
    ClaudeAI ..> ScheduledTask : provides start_time + reason
    Scheduler --> ScheduledTask : creates
    Scheduler --> DailySchedule : packages and returns
    DailySchedule "1" *-- "many" ScheduledTask : contains
    ScheduledTask "1" --> "1" CareTask : wraps